Adicionei validação de CPF e verificação de CPF já presente no banco de dados e a possibilidade dos dados que o usuário digitou não se perderem nesses casos de recarregamento da página - continuar de V2

--- a/usuarios/templates/usuarios.html
+++ b/usuarios/templates/usuarios.html
@@ -22,26 +22,42 @@
                 <div class="row">
                         <div class="col-md">
                             <p>Nome:</p>
-                            <input type="text" class="form-control" placeholder="Primeiro nome" name="nome">
+                            <input type="text" class="form-control" placeholder="Primeiro nome" name="nome" value="{{nome}}">
                         </div>
                         <div class="col-md">
                             <p>Sobrenome:</p>
-                            <input type="text" class="form-control" placeholder="Sobrenome" name="sobrenome">
+                            <input type="text" class="form-control" placeholder="Sobrenome" name="sobrenome" value="{{sobrenome}}">
                         </div>
                 </div>
                 <br>
                 <p>E-mail:</p>
-                <input type="email" class="form-control" placeholder="nome@email.com" name="email">
+                <input type="email" class="form-control" placeholder="nome@email.com" name="email" value="{{email}}">
                 <br>
                 <p>CPF:</p>
-                <input type="text" class="form-control" placeholder="___.___.___-__" name="cpf">
+                <input type="text" class="form-control" placeholder="___.___.___-__" name="cpf" value="{{cpf}}">
                 <hr style="background-color:gray;">
                 <div class="add_evol">
                     <h3>Evolução</h3>
                     <span class="btn-add-evol" onclick="add_evol()">+ Adicionar evolução</span>
       
                     <div id="form-evol">
-      
+                            {% for dia, demanda, descricao in evolucao %}
+                            <br>    
+                            <div class="row">
+                                    <div class="col-md">
+                                        <input type='date' class='form-control' name='dia' value="{{dia}}">
+                                    </div>
+                                    
+                                    <div class="col-md">
+                                        <input type='text' placeholder='Demanda' class='form-control' name='demanda' value="{{demanda}}">
+                                    </div>
+                                    
+                                    <div class="col-md">
+                                        <textarea class='form-control' placeholder='Digite uma descrição...' name='descricao'>{{ descricao }}</textarea><hr style='border-color: gray;'>
+                                    </div>
+                                    
+                                </div>    
+                            {% endfor %}
                     </div>
       
                 </div>
