--- a/templates/static/usuarios/css/usuarios.css
+++ b/templates/static/usuarios/css/usuarios.css
@@ -6,6 +6,7 @@
     margin-top: 40px;
     text-align: center;
     padding: 20px;
+    cursor: pointer;
 
 }
 
@@ -30,4 +31,13 @@
     background-color: var(--dark-color);
     padding: 5px;
     font-size: 30px;
+}
+
+#att_usuario{
+    display: none;
+}
+
+#form-att-usuario{
+    display: none;
+    padding: 30px;
 }
