Criamos a parte de atualização de usuário, fazendo com que apareça o formulário com os dados do usuário selecionado -  Continuar de V3

--- a/usuarios/templates/usuarios.html
+++ b/usuarios/templates/usuarios.html
@@ -91,6 +91,13 @@
                 <br>
                 <p>CPF: </p>
                 <input id="cpf" type="text" class="form-control">
+                <hr>
+                <br>
+                <h3>Evoluções</h3>
+                <br>
+                <div id="evolucoes">
+
+                </div>
             </div>
         </div>
 
