V5 - adicionei o link para usuários no menu lateral

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <span class="tooltip">Home</span>
           </li>
           <li>
-          <a href="#">
+          <a href="{% url 'usuarios' %}">
             <i class='bx bx-user' ></i>
             <span class="links_name">Cadastrar usuário</span>
           </a>
