V9 - fiz a geração de relatório

--- a/servicos/templates/servico.html
+++ b/servicos/templates/servico.html
@@ -10,6 +10,8 @@
     <br>
     <br>
     <div class="container">
+        <a href="{% url 'relatorio' servico.identificador %}">Gerar relatório</a>
+        <br>
         {{servico.titulo}}
     </div>
 {% endblock %}
