Adicionei a possibilidade de serviço adicional e organizei o menu lateral

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,23 +32,16 @@
           <li>
           <a href="{% url 'usuarios' %}">
             <i class='bx bx-user' ></i>
-            <span class="links_name">Cadastrar usuário</span>
+            <span class="links_name">Usuários</span>
           </a>
-          <span class="tooltip">Cadastrar usuário</span>
+          <span class="tooltip">Usuários</span>
         </li>
         <li>
-          <a href="#">
-            <i class='bx bx-chat' ></i>
-            <span class="links_name">Buscar usuário</span>
+          <a href="{% url 'listar_servico' %}">
+            <i class='bx bx-list-ul' ></i>
+            <span class="links_name">Atendimentos</span>
           </a>
-          <span class="tooltip">Buscar usuário</span>
-        </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-folder' ></i>
-            <span class="links_name">Relatórios e RMA</span>
-          </a>
-          <span class="tooltip">Relatórios e RMA</span>
+          <span class="tooltip">Atendimentos</span>
         </li>
         </ul>
       </div>
