--- a/servicos/templates/servico.html
+++ b/servicos/templates/servico.html
@@ -10,8 +10,48 @@
     <br>
     <br>
     <div class="container">
-        <a href="{% url 'relatorio' servico.identificador %}">Gerar relatório</a>
         <br>
-        {{servico.titulo}}
+        <br>
+        A descrição deste atendimento é:
+        <br>
+        <br>
+        <h3>{{servico.titulo}}</h3>
+        <br>
+        <br>
+        <a class="btn btn-info" href="{% url 'relatorio' servico.identificador %}">Gerar relatório</a>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Adicionar um serviço a este atendimento
+          </button>
+    </div>
+{% endblock %}
+
+{% block 'body' %}
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Serviço adicional</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                <form action="{% url 'servico_adicional' %}" method="POST">{% csrf_token %}
+
+                    <input type="hidden" name="identificador_servico" value={{servico.identificador}}>
+
+                    <label>Digite o título:</label>
+                    <input type="text" placeholder="titulo" class="form-control" name="titulo">
+                    <br>
+                    <label>Digite a descrição:</label>
+                    <input type="text" placeholder="titulo" class="form-control" name="descricao">
+                    <br>
+                    <input type="submit" class="btn btn-success" value="Salvar">
+                </form>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+        </div>
     </div>
 {% endblock %}
