--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="nav-list">
           <li>
-            <a href="#">
+            <a href="{% url 'home' %}">
               <i class='bx bx-grid-alt'></i>
               <span class="links_name">Home</span>
             </a>
