Fiz mais alterações que nem lembro mais pq to exausto, são 21:41 e eu acordei 6h

--- a/usuarios/templates/usuarios.html
+++ b/usuarios/templates/usuarios.html
@@ -222,7 +222,17 @@
                 <input id="cpf" type="text" class="form-control">
                 <br>
                 <input type="submit" value="salvar" class="btn btn-success" onclick="update_usuario()">
+                <br>
+<!--                 <hr>
+                <br>
+                <h3>Dados Pessoais</h3>
+                <p>Nome Social:</p>
+                <input id="nome_social" type="text" class="form-control">
+                <br>
+                <br>
+                <br> -->
                 <hr>
+                <br>
                 <br>
                 <h3>Evoluções</h3>
                 <br>
