--- a/minha_auth/templates/login.html
+++ b/minha_auth/templates/login.html
@@ -54,23 +54,27 @@
 
 <body>
     <div class="container mt-5">
-        <h2 class="mb-4">Login</h2>
-        <form action="{% url 'login' %}" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nome de usuário" name="username">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Senha" name="password">
-            </div>
-            <button type="submit" class="btn btn-primary">Entrar</button>
-        </form>
-        <p class="mt-3">Ainda não tem uma conta? <a href="{% url 'cadastro' %}" class="btn btn-link">Cadastre-se</a></p>
+        <h2 class="mb-4">Seja-bem vindo ao <b style="color:mediumblue">eSMAS</b></h2>
+        <h6 class="mb-4">O sistema de banco de dados da Secretaria Municipal de Assistência Social de Volta Redonda.</h6>
+        <br>
+        <div class="border rounded p-5">
+            <form action="{% url 'login' %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Nome de usuário" name="username">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Senha" name="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Entrar</button>
+            </form>
+            <p class="mt-3">Ainda não tem uma conta? <a href="{% url 'cadastro' %}" class="btn btn-link">Cadastre-se</a></p>
 
-        {% load socialaccount %}
-        <a href="{% provider_login_url 'google' %}" class="google-login-button">
-            <i class="bx bxl-google"></i> Login com Google
-        </a>
+            {% load socialaccount %}
+            <a href="{% provider_login_url 'google' %}" class="google-login-button">
+                <i class="bx bxl-google"></i> Login com Google
+            </a>
+        </div>
     </div>
     <!-- Adicione links para o Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
