--- a/minha_auth/templates/cadastro.html
+++ b/minha_auth/templates/cadastro.html
@@ -15,7 +15,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h3 class="card-title text-center">Cadastro</h3>
+                        <h3 class="card-title text-center">Cadastre-se na <br>plataforma <b style="color:mediumblue">eSMAS</b></h3>
                         <form action="{% url 'cadastro' %}" method="POST">
                             {% csrf_token %}
                             <div class="form-group">
